--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,4 @@
 
 # Node Modules
 node_modules/
-npm-debug.log
-
-# Foundry
-*.lock
-jsconfig.json
-foundry
-
-# Boilerplate
-build/
+package-lock.json
