--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "boilerplate",
-  "version": "2.0.0",
-  "description": "CSS compiler for the Boilerplate system",
+  "name": "kidsonbikes",
+  "version": "1.1.5",
+  "description": "CSS compiler for the Kids On Bikes system",
   "scripts": {
-    "build": "sass src/scss/boilerplate.scss css/boilerplate.css --style=expanded --no-source-map",
-    "watch": "sass src/scss/boilerplate.scss css/boilerplate.css --style=expanded --source-map --watch",
-    "generate": "node src/generate-boilerplate-system.mjs"
+    "build": "gulp build",
+    "compile": "gulp css",
+    "watch": "gulp",
+    "gulp": "gulp"
   },
   "browserslist": [
-    "last 3 versions"
+    "last 5 versions"
   ],
-  "author": "Asacolips",
+  "author": "Joscha Maier",
   "license": "MIT",
   "private": true,
+  "dependencies": {
+    "form-data": "^4.0.0",
+    "gulp": "^5",
+    "gulp-autoprefixer": "^8",
+    "gulp-replace": "^1.1.4",
+    "gulp-sass": "^5",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-zip": "^5.0.1",
+    "kidsonbikes": "file:",
+    "node-fetch": "^2.7.0"
+  },
   "devDependencies": {
-    "glob": "^10.3.10",
-    "inquirer": "^9.2.15",
-    "prompt": "^1.3.0",
-    "renamer": "^5.0.0",
-    "replace": "^1.2.2",
-    "sass": "^1.53.0"
+    "sass": "^1.79.1"
   }
 }
